# mansfield-sulfidity-predictor

./: .gitignore  CLAUDE.md  DT_flow_diagram.html  How to lunch the app.rtf  __init__.py  debug_excel_compare.py  docker-compose.yml  frontend_source_export.txt  render.yaml  requirements.txt  run_app.bat  start.sh
App documents/: EA_Reaction_Water_Block_Calculation_Chain (1).docx  The logic.docx  ~$e logic.docx  (+1 more)
backend/: .dockerignore  Dockerfile  diagnostic_s_na_audit.py  na_mass_balance_audit.py  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/api/: schemas.py
backend/app/api/routes/: calculate.py  export.py  mills.py  snapshots.py  trends.py
backend/app/db/: database.py  models.py
backend/app/engine/: chemical_charge.py  constants.py  density.py  dissolving_tank.py  dregs_filter.py  evaporator.py  fiberline.py  guidance.py  inventory.py  makeup.py  makeup_chemicals.py  mill_config.py  mill_profile.py  orchestrator.py  predictor.py  recovery_boiler.py  s_retention.py  sensitivity.py  slaker_model.py
backend/app/reports/: _common.py  excel_report.py  pdf_report.py
backend/scripts/: mansfield_diagnostic.py
backend/tests/: conftest.py  golden_snapshot_pine_hill.json  test_chemical_charge_multi.py  test_combine_rb_dt.py  test_dissolving_tank.py  test_forward_leg.py  test_golden_regression.py  test_makeup_chemicals.py  test_mass_balance_closure.py  test_mill_profile.py  test_multi_mill_configs.py  test_multi_rb_dt_integration.py  test_na_s_mass_balance.py  test_validation_vs_excel.py
backend/tests/reference_data/: excel_v4_values.json
(+75 files in other folders)
